RESOLVED FIXED279272
[WPE] Fix device scale factor in the DRM platform
https://bugs.webkit.org/show_bug.cgi?id=279272
Summary [WPE] Fix device scale factor in the DRM platform
lisiwei
Reported 2024-09-06 11:12:49 PDT
The device scale factor in the DRM platform is not applied when it's less than 1.
Attachments
lisiwei
Comment 1 2024-09-06 11:16:01 PDT
EWS
Comment 2 2024-09-09 22:43:54 PDT
Committed 283394@main (a34b9541632a): <https://commits.webkit.org/283394@main> Reviewed commits have been landed. Closing PR #33249 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.