[WPE] Fix device scale factor in the DRM platform https://bugs.webkit.org/show_bug.cgi?id=279272

Reviewed by Carlos Garcia Campos.

Change the minimum specification of the DRM monitor scale from 1.0 to 0;
change the assertion check for arg passed in from 1.0 to 0.

* Source/WebKit/WPEPlatform/wpe/WPEMonitor.cpp:
(wpe_monitor_class_init):
(wpe_monitor_set_scale):
* Source/WebKit/WPEPlatform/wpe/WPEView.cpp:
(wpe_view_class_init):

Canonical link: https://commits.webkit.org/283394@main